clusters/eldertree/nima/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nima
  labels:
    name: nima
    app: nima
